fix horizontal scrollbar showing during animation

--- a/src/pages/chat/styles.module.scss
+++ b/src/pages/chat/styles.module.scss
@@ -59,7 +59,8 @@
       .messages {
         width: 100%;
         flex: 1 1 0;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
         padding: 20px;
       }
     }
